# yozist

./: .gitignore  Cargo.toml  README.md  eslint.config.mjs
.claude/: launch.json
.claude/skills/webui-debug/: SKILL.md
apps/yozist-server/: Cargo.toml
apps/yozist-server/src/: main.rs
crates/yozist-ai/: Cargo.toml
crates/yozist-ai/src/: lib.rs
crates/yozist-api/: Cargo.toml  build.rs  jsconfig.json
crates/yozist-api/assets/: common.js
crates/yozist-api/assets/pages/: compare.js  file_commit.js  file_detail.js  files.js  filters.js  index.js  login.js  manage.js  media.js  series_settings.js  settings.js  tags.js  trash.js
crates/yozist-api/assets/view-plugins/: binary-meta.js  image-diff.js  table-csv.js  text-diff.js  viewer-media.js
crates/yozist-api/src/: lib.rs  ui.rs  zip.rs
crates/yozist-api/src/ui/: compare.html  file_commit.html  file_detail.html  files.html  index.html  login.html  manage.html  settings.html
crates/yozist-api/templates/: base.html  compare.html  file_commit.html  file_detail.html  files.html  filters.html  index.html  login.html  manage.html  media.html  queries.html  series_settings.html  settings.html  tags.html  trash.html
crates/yozist-auth/: Cargo.toml
crates/yozist-auth/src/: authorizer.rs  lib.rs  permission.rs  sqlite.rs
crates/yozist-cache/: Cargo.toml
crates/yozist-cache/migrations/: 0001_preview_cache.sql
crates/yozist-cache/src/: generator.rs  job_handler.rs  lib.rs  sqlite.rs
crates/yozist-core/: Cargo.toml
crates/yozist-core/src/: lib.rs
crates/yozist-db/: Cargo.toml
crates/yozist-db/migrations/: 0001_init.sql  0002_saved_queries.sql  0003_audit_log.sql  0004_share_tokens.sql  0005_fts.sql  0006_group_hierarchy.sql  0007_drop_acl_expires_at.sql  0008_drop_groups_parent.sql  0009_acl_target_kind_relax.sql  0010_share_kind_relax.sql  0011_drop_users_groups.sql  0012_smb_credentials.sql  0013_files_charset.sql  0014_files_actors.sql  0016_commits_committed_by.sql  0017_actors_user_id.sql  0018_rename_saved_queries_to_filters.sql  0019_files_deleted_at.sql  0020_series_sort_order.sql  0021_commits_size.sql  0022_commits_delta_base.sql  0023_blob_orphans.sql  0024_fts_trigram.sql  0025_user_id_to_uuid.sql
crates/yozist-db/src/: audit.rs  lib.rs  resolver.rs  sqlite.rs
crates/yozist-jobs/: Cargo.toml
crates/yozist-jobs/migrations/: 0001_jobs.sql
crates/yozist-jobs/src/: lib.rs  store.rs
crates/yozist-smb/: Cargo.toml
crates/yozist-smb/src/: backends.rs  credentials.rs  handle.rs  lib.rs  query_shares.rs
crates/yozist-storage/: Cargo.toml
crates/yozist-storage/src/: fs.rs  lib.rs
crates/yozist-tagging/: Cargo.toml
crates/yozist-tagging/src/: lib.rs
crates/yozist-versioning/: Cargo.toml
crates/yozist-versioning/src/: delta.rs  lib.rs  registry.rs  text.rs
crates/yozist-view/: Cargo.toml
crates/yozist-view/src/: lib.rs
docs/: plugin-view-system.md  upstream-smb-server-proposal.md  upstream-smb-server.patch
