[workspace]
resolver = "2"
exclude = ["vendor"]
members = [
    "crates/yozist-core",
    "crates/yozist-storage",
    "crates/yozist-db",
    "crates/yozist-versioning",
    "crates/yozist-view",
    "crates/yozist-tagging",
    "crates/yozist-auth",
    "crates/yozist-ai",
    "crates/yozist-smb",
    "crates/yozist-api",
    "apps/yozist-server",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
repository = "https://github.com/mokuichi147/yozist"
authors = ["mokuichi147 <mokuichi147@gmail.com>"]

[workspace.dependencies]
# Internal crates
yozist-core = { path = "crates/yozist-core" }
yozist-storage = { path = "crates/yozist-storage" }
yozist-db = { path = "crates/yozist-db" }
yozist-versioning = { path = "crates/yozist-versioning" }
yozist-view = { path = "crates/yozist-view" }
yozist-tagging = { path = "crates/yozist-tagging" }
yozist-auth = { path = "crates/yozist-auth" }
yozist-ai = { path = "crates/yozist-ai" }
yozist-smb = { path = "crates/yozist-smb" }
yozist-api = { path = "crates/yozist-api" }

# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Errors and logging
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Core data types
uuid = { version = "1.10", features = ["v4", "v7", "serde"] }
time = { version = "0.3", features = ["serde", "macros"] }
bytes = "1.7"

# DB
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "migrate", "uuid", "time"] }

# Storage / compression / hashing
sha2 = "0.10"
zstd = "0.13"
async-compression = { version = "0.4", features = ["tokio", "zstd"] }

# Diff / CRDT
similar = "2.6"
yrs = "0.21"
# 公開版 smb-server 0.4 は SmbError / SmbPath / BackendCapabilities / FileTimes
# を再エクスポートしておらず、外部 ShareBackend 実装ができないため、本リポジトリ
# 内 vendor 版を直接利用する（再エクスポート追加済み）。upstream に PR 予定。
smb-server = { path = "vendor/smb-server" }

# HTTP / API
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace"] }

# テンプレートエンジン (WebUI の HTML 生成)
askama = "0.16"

# Auth
# 認証・ユーザー/グループ管理は upstream user-permission-core (crates.io) に委譲する。
# サーバ本体 (user-permission クレート) は中継先として別プロセスで動かす想定のため
# 依存には含めない。
user-permission-core = "0.4"
jsonwebtoken = "9"
rand = "0.8"

# CLI / Config
clap = { version = "4", features = ["derive", "env"] }
figment = { version = "0.10", features = ["toml", "env"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
