[package]
name = "yozist-ai"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "yozist: AI analysis providers (tag suggestion, summarization)."

[dependencies]
yozist-core.workspace = true
async-trait.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
