[package]
name = "yozist-api"
version.workspace = true
edition.workspace = true
repository.workspace = true
description = "yozist: REST API + AI endpoints + WebUI (axum + askama)."

[dependencies]
yozist-core.workspace = true
yozist-db.workspace = true
yozist-storage.workspace = true
yozist-versioning.workspace = true
yozist-auth.workspace = true
yozist-ai.workspace = true
yozist-tagging.workspace = true
user-permission-core.workspace = true
uuid.workspace = true
time.workspace = true
async-trait.workspace = true
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
askama.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
tower = { workspace = true, features = ["util"] }
tempfile = "3"
