[package]
name = "yozist-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "yozist: authentication + ACL (port of Mokuichi147/UserPermission to Rust)."

[dependencies]
yozist-core.workspace = true
yozist-db.workspace = true
async-trait.workspace = true
tokio.workspace = true
argon2.workspace = true
jsonwebtoken.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
thiserror.workspace = true
tracing.workspace = true
bitflags = { version = "2", features = ["serde"] }
