[package]
name = "yozist-cache"
version.workspace = true
edition.workspace = true
repository.workspace = true
description = "yozist: thumbnail/preview cache (SQLite index + compressed files on fast storage)."

[dependencies]
yozist-core.workspace = true
yozist-db.workspace = true
yozist-versioning.workspace = true
yozist-jobs.workspace = true
async-trait.workspace = true
tokio.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
uuid.workspace = true
thiserror.workspace = true
tracing.workspace = true
image.workspace = true
compressor.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
tempfile = "3"
