[package]
name = "yozist-smb"
version.workspace = true
edition.workspace = true
repository.workspace = true
description = "yozist: SMB network layer (tag/series-oriented virtual filesystem)."

[dependencies]
yozist-core.workspace = true
yozist-db.workspace = true
yozist-storage.workspace = true
yozist-versioning.workspace = true
yozist-auth.workspace = true
user-permission-core.workspace = true
sqlx.workspace = true
async-trait.workspace = true
tokio.workspace = true
bytes.workspace = true
thiserror.workspace = true
tracing.workspace = true
smb-server = { workspace = true }
uuid.workspace = true
time.workspace = true
parking_lot = "0.12"

[dev-dependencies]
tempfile = "3"
