[package]
name = "yozist-storage"
version.workspace = true
edition.workspace = true
repository.workspace = true
description = "yozist: pluggable blob storage abstraction (BlobStore trait + reference implementations)."

[dependencies]
yozist-core.workspace = true
async-trait.workspace = true
tokio.workspace = true
bytes.workspace = true
futures.workspace = true
sha2.workspace = true
zstd.workspace = true
async-compression.workspace = true
thiserror.workspace = true
tracing.workspace = true
# Unix の statvfs で空き容量を問い合わせる（ディスク使用量 UI 用）。
libc = "0.2"

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
tempfile = "3"
