[package]
name = "yozist-versioning"
version.workspace = true
edition.workspace = true
repository.workspace = true
description = "yozist: pluggable CRDT/LWW versioning engine with format registry."

[dependencies]
yozist-core.workspace = true
yozist-storage.workspace = true
yozist-db.workspace = true
yozist-tagging.workspace = true
async-trait.workspace = true
tokio.workspace = true
bytes.workspace = true
futures.workspace = true
similar.workspace = true
yrs.workspace = true
thiserror.workspace = true
tracing.workspace = true
time.workspace = true
mime_guess = "2.0.5"
infer = "0.19.0"
# テキストの文字コード判定（chardetng）と変換（encoding_rs）。
# Shift-JIS/EUC-JP/UTF-16/UTF-8 等を UTF-8 へデコードし、元 charset へ再エンコードする。
encoding_rs = "0.8"
chardetng = "0.1"
# コミット差分保存（issue #10）: 前バージョンを辞書にした zstd 差分圧縮。
zstd.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
tempfile = "3"
