[package]
name = "yozist-view"
version.workspace = true
edition.workspace = true
repository.workspace = true
description = "yozist: pluggable view/converter registry (format bytes -> ViewModel)."

[dependencies]
yozist-core.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
